--- a/src/main/webapp/assets/css/AddStudent.css
+++ b/src/main/webapp/assets/css/AddStudent.css
@@ -5,9 +5,9 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;
     align-items: center; /* Center content horizontally */
-    justify-content: center; /* Center content vertically */
+    /*justify-content: center; /* Center content vertically */
 }
 
 /* Style the sidebar navigation */
@@ -42,7 +42,7 @@ body {
     display: flex;
     width: 100%;
     background-color: #f5f5f5;
-    border: 1px solid grey;
+   
     justify-content: center; /* Center content horizontally */
     padding: 20px;
 }
@@ -121,6 +121,7 @@ h1#add_student {
     text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
+    
 }
 
 #openModalButton {
@@ -133,6 +134,8 @@ h1#add_student {
     font-size: 18px;
     margin: 20px;
     width: 140px;
+    margin-left: 500px;
+    height: 50px;
 }
 
 #openModalButton:hover {
