--- a/src/main/webapp/assets/css/AddStudent.css
+++ b/src/main/webapp/assets/css/AddStudent.css
@@ -40,7 +40,7 @@ body {
 /* Style the modal container */
 .modal {
     display: flex;
-    width: 100%;
+    
     background-color: #f5f5f5;
     justify-content: center; /* Center content horizontally */
     padding: 20px;
@@ -60,7 +60,7 @@ body {
 /* Style the close button */
 .close {
     position: absolute;
-    top: 160px;
+  
     right: 450px;
     font-size: 30px;
     font-weight: 1000;
@@ -124,4 +124,16 @@ h1#add_student {
     font-size: 24px;
     
 }
-
+.edit-content {
+	margin:50px 0px 0px 100px;
+    width: 400px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    border: 1px solid black;
+}
+#editstupopup {
+	margin-top: -200px;
+}
